--- a/app.css
+++ b/app.css
@@ -1,11 +1,4 @@
-hello
-this 
-is my new 
-css file.
-wsjhfgosd
-sefjf;lsdj
-\skdgksd
-skgspkjvg
-sdkjspv;defsl
-lorem
-lorem*8
+.l {
+  background-color: aliceblue;
+  padding: 29px;
+}
